# webscraping-python

./: .gitignore  README.md  chapter1.ipynb  chapter10.ipynb  chapter11.ipynb  chapter12.ipynb  chapter14.ipynb  chapter15.ipynb  chapter16.ipynb  chapter17.ipynb  chapter2.ipynb  chapter3.ipynb  chapter4.ipynb  chapter6.ipynb  chapter7.ipynb  chapter8.ipynb  chapter9.ipynb  pyproject.toml  requirements.txt
chapter13/: chapter13.ipynb  src.txt
extract/: duplicates.py  extract_pdf.py  read_url.py  set_color_text_pdf.py  webscraping.py
flask/: api.py  extract_pdf.py
flask/templates/: page_404.html
wikiSpider/wikiSpider/: pipelines.py  settings.py
wikiSpider/wikiSpider/spiders/: article.py  articleItems.py  articleItems_pipeline.py  articleSpider.py  articlesMoreRules.py
