[project]
name = "webscraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8==2.3.2",
    "backcall==0.2.0",
    "beautifulsoup4==4.13.5",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "constantly==23.10.4",
    "cryptography==45.0.7",
    "cssselect==1.3.0",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "executing==2.2.1",
    "filelock==3.19.1",
    "flake8==7.3.0",
    "h11==0.16.0",
    "hyperlink==21.0.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "incremental==24.7.2",
    "ipykernel==6.30.1",
    "ipython==9.5.0",
    "itemadapter==0.12.2",
    "itemloaders==1.3.2",
    "jedi==0.19.2",
    "jmespath==1.0.1",
    "joblib==1.5.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "lxml==6.0.1",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "mypy==1.18.1",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "nltk==3.9.1",
    "numpy==2.3.3",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "parsel==1.10.0",
    "parso==0.8.5",
    "pdfminer3k==1.3.4",
    "pickleshare==0.7.5",
    "platformdirs==4.4.0",
    "ply==3.11",
    "prompt-toolkit==3.0.52",
    "protego==0.5.0",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycodestyle==2.14.0",
    "pycparser==2.23",
    "pydispatcher==2.0.7",
    "pyflakes==3.4.0",
    "pygments==2.19.2",
    "pymysql==1.1.2",
    "pyopenssl==25.1.0",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pywin32==311",
    "pyzmq==27.1.0",
    "queuelib==1.8.0",
    "regex==2025.9.1",
    "requests==2.32.5",
    "requests-file==2.1.0",
    "scrapy==2.13.3",
    "selenium==4.35.0",
    "service-identity==24.2.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "tldextract==5.3.0",
    "tomli==2.2.1",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "twisted==25.5.0",
    "twisted-iocpsupport==25.2.0",
    "typing-extensions==4.14.0",
    "urllib3==2.5.0",
    "urlopen==1.0.0",
    "w3lib==2.3.1",
    "wcwidth==0.2.13",
    "wsproto==1.2.0",
    "yapf==0.43.0",
    "zipp==3.23.0",
    "zope-interface==8.0",
]
